--- a/frontend/src/style/navbar.css
+++ b/frontend/src/style/navbar.css
@@ -1,6 +1,7 @@
-.search-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:100vh;  
+.color-navbar {
+    background-color: white;
+}
+
+#navbar-container {
+    margin-left: 3em;
 }
